добавляет тени на кнопки. карточки команды и портфолио

--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="list flexbox">
-                    <li class="img content-box">
+                    <li class="img content-box comands">
                         <img src="./images/img-1.jpg" alt="участник команды" width="270">
                         <h5 class="staff-title">Игорь Демьяненко</h5>
                         <p lang="en" class="staff-text">Product Designer</p>
                     </li>
-                    <li class="img content-box">
+                    <li class="img content-box comands">
                         <img src="./images/img-2.jpg" alt="участник команды" width="270">
                         <h5 class="staff-title">Ольга Репина</h5>
                         <p lang="en" class="staff-text">Frontend Developer</p>
                     </li>
-                    <li class="img content-box">
+                    <li class="img content-box comands">
                         <img src="./images/img-3.jpg" alt="участник команды" width="270">
                         <h5 class="staff-title">Николай Тарасов</h5>
                         <p lang="en" class="staff-text">Marketing</p>
                     </li>
-                    <li class="img content-box">
+                    <li class="img content-box comands">
                         <img src="./images/img-4.jpg" alt="участник команды" width="270">
                         <h5 class="staff-title">Михаил Ермаков</h5>
                         <p lang="en" class="staff-text">UI Designer</p>
