--- a/portfolio.html
+++ b/portfolio.html
@@ -50,63 +50,63 @@
         <section class="section section-price">
                 <div class="container">
                     <ul class="list list-projects flexbox">
-                        <li class="img content-box flex-elemets">
+                        <li class="img content-box flex-elemets project-item">
                             <img src="./images/project-1.jpg" alt="проект" width="370">
                             <div class="projects">
                                 <h2 class="projects-title">Технокряк</h2>
                                 <p class="projects-text">Веб-сайт</p>
                             </div>
                         </li>
-                        <li class="img content-box flex-elemets">
+                        <li class="img content-box flex-elemets project-item">
                             <img src="./images/project-2.jpg" alt="проект" width="370">
                             <div class="projects">
                                 <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="projects-text">Дизайн</p>
                             </div>
                         </li>
-                        <li class="img content-box flex-elemets">
+                        <li class="img content-box flex-elemets project-item">
                             <img src="./images/project-3.jpg" alt="проект" width="370">
                             <div class="projects">
                                 <h2 class="projects-title">Ресторан Seafood</h2>
                                 <p class="projects-text">Приложение</p>
                             </div>
                         </li>
-                        <li class="img content-box flex-elemets">
+                        <li class="img content-box flex-elemets project-item">
                             <img src="./images/project-4.jpg" alt="проект" width="370">
                             <div class="projects">
                                 <h2 class="projects-title">Проект Prime</h2>
                                 <p class="projects-text">Маркетинг</p>
                             </div>
                         </li>
-                        <li class="img content-box flex-elemets">
+                        <li class="img content-box flex-elemets project-item">
                             <img src="./images/project-5.jpg" alt="проект" width="370">
                             <div class="projects">
                                 <h2 class="projects-title">Проект Boxes</h2>
                                 <p class="projects-text">Приложение</p>
                             </div>
                         </li>
-                        <li class="img content-box flex-elemets">
+                        <li class="img content-box flex-elemets project-item">
                             <img src="./images/project-6.jpg" alt="проект" width="370">
                             <div class="projects">
                                 <h2 class="projects-title">Inspiration has no Borders</h2>
                                 <p class="projects-text">Веб-сайт</p>
                             </div>
                         </li>
-                        <li class="img content-box flex-elemets">
+                        <li class="img content-box flex-elemets project-item">
                             <img src="./images/project-7.jpg" alt="проект" width="370">
                             <div class="projects">
                                 <h2 class="projects-title">Издание Limited Edition</h2>
                                 <p class="projects-text">Дизайн</p>
                             </div>
                         </li>
-                        <li class="img content-box flex-elemets">
+                        <li class="img content-box flex-elemets project-item">
                             <img src="./images/project-8.jpg" alt="проект" width="370">
                             <div class="projects">
                                 <h2 class="projects-title">Проект LAB</h2>
                                 <p class="projects-text">Маркетинг</p>
                             </div>
                         </li>
-                        <li class="img content-box flex-elemets">
+                        <li class="img content-box flex-elemets project-item">
                             <img src="./images/project-9.jpg" alt="проект" width="370">
                             <div class="projects">
                                 <h2 class="projects-title">Growing Business</h2>
