--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
         <section class="section">
             <div class="container">
                 <ul class="list flexbox">
-                    <li class="content-box prioritet">
+                    <li class="content-box prioritet icon-antenna">                        
                         <h3 class="list-title">Внимание к деталям</h3>
                         <p class="list-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="content-box prioritet">
+                    <li class="content-box prioritet icon-clock">
                         <h3 class="list-title">Пунктуальность</h3>
                         <p class="list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="content-box prioritet">
+                    <li class="content-box prioritet icon-diagram">
                         <h3 class="list-title">Планирование</h3>
                         <p class="list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="content-box prioritet">
+                    <li class="content-box prioritet icon-astronaut">
                         <h3 class="list-title">Современные технологии</h3>
                         <p class="list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>            
