--- a/index.html
+++ b/index.html
@@ -111,6 +111,63 @@
                 </ul>
             </div>
         </section>
+
+        <!-- Постоянные клиенты -->
+        <section class="section clients">
+            <div class="container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="list flexbox">
+                    <li class="client-item"><a href="" class="link"> 
+                        <div class="icon-container">
+                            <svg class="client-icon" width="45px" height="50px">
+                                <use href="./images/icons/symbol-defs.svg#icon-logo-1"></use>
+                            </svg>
+                        </div> 
+                        </a>
+                    </li>
+                    <li class="client-item"><a href="" class="link">
+                        <div class="icon-container">
+                            <svg class="client-icon" width="40px" height="52px">
+                                <use href="./images/icons/symbol-defs.svg#icon-logo-2"></use>
+                            </svg>
+                        </div>
+                        </a>
+                    </li>
+                    <li class="client-item"><a href="" class="link">
+                        <div class="icon-container">
+                            <svg class="client-icon" width="41px" height="42px">
+                                <use href="./images/icons/symbol-defs.svg#icon-logo-3"></use>
+                            </svg>
+                        </div>
+                        </a>
+                    </li>
+                    <li class="client-item"><a href="" class="link">
+                        <div class="icon-container">
+                            <svg class="client-icon" width="80px" height="42px">
+                                <use href="./images/icons/symbol-defs.svg#icon-logo-4"></use>
+                            </svg>
+                        </div>
+                        </a>
+                    </li>
+                    <li class="client-item"><a href="" class="link">
+                        <div class="icon-container">
+                            <svg class="client-icon" width="59px" height="47px">
+                                <use href="./images/icons/symbol-defs.svg#icon-logo-5"></use>
+                            </svg>
+                        </div>
+                        </a>
+                    </li>
+                    <li class="client-item"><a href="" class="link">
+                        <div class="icon-container">
+                            <svg class="client-icon" width="89px" height="45px">
+                                <use href="./images/icons/symbol-defs.svg#icon-logo-6"></use>
+                            </svg>
+                        </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <!--Футер-->
