добавляет иконки соц.сетей на карточки команды

--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
 
                 <div class="contacts-item">
                     <ul class="contacts list">
-                        <li class="site-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                        <li class="site-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                        <!-- <div class="hover-icon"> -->
+                            <li class="site-item"><a href="mailto:info@devstudio.com" class="link">
+                                <div class="icon-container">
+                                    <svg class="contact-icon" width="16px" height="12px">
+                                        <use href="./images/icons/symbol-defs.svg#icon-p-envelope"></use>
+                                    </svg>
+                                </div>info@devstudio.com</a>
+                            </li>
+                        <!-- </div> -->
+                        <li class="site-item"><a href="tel:+380961111111" class="link">
+                            <div class="icon-container">
+                                <svg class="contact-icon" width="10px" height="16px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-p-smartphone"></use>
+                                </svg>
+                            </div>+38 096 111 11 11</a></li>
                     </ul>   
                 </div>             
             </nav>
@@ -92,21 +105,109 @@
                         <img src="./images/img-1.jpg" alt="участник команды" width="270">
                         <h5 class="staff-title">Игорь Демьяненко</h5>
                         <p lang="en" class="staff-text">Product Designer</p>
+                        <ul class="list social-icon-list flexbox">
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.instagram.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-instagram"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.twitter.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-twitter"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.facebook.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-facebook"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.linkedin.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-linkedin"></use>
+                                </svg></a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="img content-box comands">
                         <img src="./images/img-2.jpg" alt="участник команды" width="270">
                         <h5 class="staff-title">Ольга Репина</h5>
                         <p lang="en" class="staff-text">Frontend Developer</p>
+                        <ul class="list social-icon-list flexbox">
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.instagram.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-instagram"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.twitter.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-twitter"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.facebook.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-facebook"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.linkedin.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-linkedin"></use>
+                                </svg></a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="img content-box comands">
                         <img src="./images/img-3.jpg" alt="участник команды" width="270">
                         <h5 class="staff-title">Николай Тарасов</h5>
                         <p lang="en" class="staff-text">Marketing</p>
+                        <ul class="list social-icon-list flexbox">
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.instagram.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-instagram"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.twitter.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-twitter"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.facebook.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-facebook"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.linkedin.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-linkedin"></use>
+                                </svg></a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="img content-box comands">
                         <img src="./images/img-4.jpg" alt="участник команды" width="270">
                         <h5 class="staff-title">Михаил Ермаков</h5>
                         <p lang="en" class="staff-text">UI Designer</p>
+                        <ul class="list social-icon-list flexbox">
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.instagram.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-instagram"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.twitter.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-twitter"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.facebook.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-facebook"></use>
+                                </svg></a>
+                            </li>
+                            <li class="social-icon-item"><a class="social-icon-link" href="https://www.linkedin.com">
+                                <svg class="social-icon" width="20px" height="20px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-s-linkedin"></use>
+                                </svg></a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -116,8 +217,8 @@
         <section class="section clients">
             <div class="container">
                 <h2 class="section-title">Постоянные клиенты</h2>
-                <ul class="list flexbox">
-                    <li class="client-item"><a href="" class="link"> 
+                <ul class="list clients-icon-list flexbox">
+                    <li class="client-item"><a href="" class="link client-icon-link"> 
                         <div class="icon-container">
                             <svg class="client-icon" width="45px" height="50px">
                                 <use href="./images/icons/symbol-defs.svg#icon-logo-1"></use>
@@ -125,7 +226,7 @@
                         </div> 
                         </a>
                     </li>
-                    <li class="client-item"><a href="" class="link">
+                    <li class="client-item"><a href="" class="link client-icon-link">
                         <div class="icon-container">
                             <svg class="client-icon" width="40px" height="52px">
                                 <use href="./images/icons/symbol-defs.svg#icon-logo-2"></use>
@@ -133,7 +234,7 @@
                         </div>
                         </a>
                     </li>
-                    <li class="client-item"><a href="" class="link">
+                    <li class="client-item"><a href="" class="link client-icon-link">
                         <div class="icon-container">
                             <svg class="client-icon" width="41px" height="42px">
                                 <use href="./images/icons/symbol-defs.svg#icon-logo-3"></use>
@@ -141,7 +242,7 @@
                         </div>
                         </a>
                     </li>
-                    <li class="client-item"><a href="" class="link">
+                    <li class="client-item"><a href="" class="link client-icon-link">
                         <div class="icon-container">
                             <svg class="client-icon" width="80px" height="42px">
                                 <use href="./images/icons/symbol-defs.svg#icon-logo-4"></use>
@@ -149,7 +250,7 @@
                         </div>
                         </a>
                     </li>
-                    <li class="client-item"><a href="" class="link">
+                    <li class="client-item"><a href="" class="link client-icon-link">
                         <div class="icon-container">
                             <svg class="client-icon" width="59px" height="47px">
                                 <use href="./images/icons/symbol-defs.svg#icon-logo-5"></use>
@@ -157,7 +258,7 @@
                         </div>
                         </a>
                     </li>
-                    <li class="client-item"><a href="" class="link">
+                    <li class="client-item"><a href="" class="link client-icon-link">
                         <div class="icon-container">
                             <svg class="client-icon" width="89px" height="45px">
                                 <use href="./images/icons/symbol-defs.svg#icon-logo-6"></use>
