добавляет иконки в шапку

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,23 @@
 
                 <div class="contacts-item">
                     <ul class="contacts list">
-                        <li class="site-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                        <li class="site-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-                    </ul>
-                </div>
+                        <li class="site-item"><a href="mailto:info@devstudio.com" class="link contact-icon-link">
+                            <div class="icon-container">
+                                <svg class="contact-icon" width="16px" height="12px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-p-envelope"></use>
+                                </svg>info@devstudio.com
+                            </div></a>
+                        </li>
+                        
+                        <li class="site-item"><a href="tel:+380961111111" class="link contact-icon-link">
+                            <div class="icon-container">
+                                <svg class="contact-icon" width="10px" height="16px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-p-smartphone"></use>
+                                </svg>+38 096 111 11 11
+                            </div></a>
+                        </li>
+                    </ul>   
+                </div>          
             </nav>
         </div>
     </header>
