--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 
                 <div class="contacts-item">
                     <ul class="contacts list">
-                        <!-- <div class="hover-icon"> -->
-                            <li class="site-item"><a href="mailto:info@devstudio.com" class="link">
-                                <div class="icon-container">
-                                    <svg class="contact-icon" width="16px" height="12px">
-                                        <use href="./images/icons/symbol-defs.svg#icon-p-envelope"></use>
-                                    </svg>
-                                </div>info@devstudio.com</a>
-                            </li>
-                        <!-- </div> -->
-                        <li class="site-item"><a href="tel:+380961111111" class="link">
+                        <li class="site-item"><a href="mailto:info@devstudio.com" class="link contact-icon-link">
+                            <div class="icon-container">
+                                <svg class="contact-icon" width="16px" height="12px">
+                                    <use href="./images/icons/symbol-defs.svg#icon-p-envelope"></use>
+                                </svg>info@devstudio.com
+                            </div></a>
+                        </li>
+                        
+                        <li class="site-item"><a href="tel:+380961111111" class="link contact-icon-link">
                             <div class="icon-container">
                                 <svg class="contact-icon" width="10px" height="16px">
                                     <use href="./images/icons/symbol-defs.svg#icon-p-smartphone"></use>
-                                </svg>
-                            </div>+38 096 111 11 11</a></li>
+                                </svg>+38 096 111 11 11
+                            </div></a>
+                        </li>
                     </ul>   
                 </div>             
             </nav>
@@ -283,6 +283,31 @@
                 <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> <br>            
             </address>    
         </div>    
+        <section>
+            <h5 class="staff-title">ПРИСОЕДИНЯЙТЕСЬ</h5>
+                <ul class="list social-icon-list flexbox">
+                    <li class="social-icon-item"><a class="social-icon-link" href="https://www.instagram.com">
+                        <svg class="social-icon" width="20px" height="20px">
+                            <use href="./images/icons/symbol-defs.svg#icon-s-instagram"></use>
+                        </svg></a>
+                    </li>
+                    <li class="social-icon-item"><a class="social-icon-link" href="https://www.twitter.com">
+                        <svg class="social-icon" width="20px" height="20px">
+                            <use href="./images/icons/symbol-defs.svg#icon-s-twitter"></use>
+                        </svg></a>
+                    </li>
+                    <li class="social-icon-item"><a class="social-icon-link" href="https://www.facebook.com">
+                        <svg class="social-icon" width="20px" height="20px">
+                            <use href="./images/icons/symbol-defs.svg#icon-s-facebook"></use>
+                        </svg></a>
+                    </li>
+                    <li class="social-icon-item"><a class="social-icon-link" href="https://www.linkedin.com">
+                        <svg class="social-icon" width="20px" height="20px">
+                            <use href="./images/icons/symbol-defs.svg#icon-s-linkedin"></use>
+                        </svg></a>
+                    </li>
+                </ul>            
+        </section>
 
     </footer>
 
