добавляет соц.сети в подвал

--- a/index.html
+++ b/index.html
@@ -283,26 +283,26 @@
                 <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> <br>            
             </address>    
         </div>    
-        <section>
-            <h5 class="staff-title">ПРИСОЕДИНЯЙТЕСЬ</h5>
-                <ul class="list social-icon-list flexbox">
-                    <li class="social-icon-item"><a class="social-icon-link" href="https://www.instagram.com">
-                        <svg class="social-icon" width="20px" height="20px">
+        <section class="common">
+            <h5 class="common-title">ПРИСОЕДИНЯЙТЕСЬ</h5>
+                <ul class="list common-icon-list flexbox">
+                    <li class="common-icon-item"><a class="common-icon-link" href="https://www.instagram.com">
+                        <svg class="common-icon" width="20px" height="20px">
                             <use href="./images/icons/symbol-defs.svg#icon-s-instagram"></use>
                         </svg></a>
                     </li>
-                    <li class="social-icon-item"><a class="social-icon-link" href="https://www.twitter.com">
-                        <svg class="social-icon" width="20px" height="20px">
+                    <li class="common-icon-item"><a class="common-icon-link" href="https://www.twitter.com">
+                        <svg class="common-icon" width="20px" height="20px">
                             <use href="./images/icons/symbol-defs.svg#icon-s-twitter"></use>
                         </svg></a>
                     </li>
-                    <li class="social-icon-item"><a class="social-icon-link" href="https://www.facebook.com">
-                        <svg class="social-icon" width="20px" height="20px">
+                    <li class="common-icon-item"><a class="common-icon-link" href="https://www.facebook.com">
+                        <svg class="common-icon" width="20px" height="20px">
                             <use href="./images/icons/symbol-defs.svg#icon-s-facebook"></use>
                         </svg></a>
                     </li>
-                    <li class="social-icon-item"><a class="social-icon-link" href="https://www.linkedin.com">
-                        <svg class="social-icon" width="20px" height="20px">
+                    <li class="common-icon-item"><a class="common-icon-link" href="https://www.linkedin.com">
+                        <svg class="common-icon" width="20px" height="20px">
                             <use href="./images/icons/symbol-defs.svg#icon-s-linkedin"></use>
                         </svg></a>
                     </li>
