добавляет иконки соц.сетей в футер

--- a/index.html
+++ b/index.html
@@ -273,41 +273,43 @@
 
     <!--Футер-->
     <footer class="footer">
+        <div class="flex-container">
 
-        <div class="container">
-            <a href="WebStudio" class="logo"><span class="accent">Web</span>Studio</a>
+            <div class="container address-logo">
+                <a href="WebStudio" class="logo"><span class="accent">Web</span><span class="white">Studio</span></a>
 
-            <address class="address">
-                г. Киев, пр-т Леси Украинки, 26 <br>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> <br>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> <br>            
-            </address>    
-        </div>    
-        <section class="common">
-            <h5 class="common-title">ПРИСОЕДИНЯЙТЕСЬ</h5>
-                <ul class="list common-icon-list flexbox">
-                    <li class="common-icon-item"><a class="common-icon-link" href="https://www.instagram.com">
-                        <svg class="common-icon" width="20px" height="20px">
-                            <use href="./images/icons/symbol-defs.svg#icon-s-instagram"></use>
-                        </svg></a>
-                    </li>
-                    <li class="common-icon-item"><a class="common-icon-link" href="https://www.twitter.com">
-                        <svg class="common-icon" width="20px" height="20px">
-                            <use href="./images/icons/symbol-defs.svg#icon-s-twitter"></use>
-                        </svg></a>
-                    </li>
-                    <li class="common-icon-item"><a class="common-icon-link" href="https://www.facebook.com">
-                        <svg class="common-icon" width="20px" height="20px">
-                            <use href="./images/icons/symbol-defs.svg#icon-s-facebook"></use>
-                        </svg></a>
-                    </li>
-                    <li class="common-icon-item"><a class="common-icon-link" href="https://www.linkedin.com">
-                        <svg class="common-icon" width="20px" height="20px">
-                            <use href="./images/icons/symbol-defs.svg#icon-s-linkedin"></use>
-                        </svg></a>
-                    </li>
-                </ul>            
-        </section>
+                <address class="address">
+                    г. Киев, пр-т Леси Украинки, 26 <br>
+                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> <br>
+                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> <br>            
+                </address>    
+            </div>    
+            <section class="common container flexbox">
+                <h5 class="common-title">ПРИСОЕДИНЯЙТЕСЬ</h5>
+                    <ul class="list common-icon-list flexbox">
+                        <li class="common-icon-item"><a class="common-icon-link" href="https://www.instagram.com">
+                            <svg class="common-icon" width="20px" height="20px">
+                                <use href="./images/icons/symbol-defs.svg#icon-s-instagram"></use>
+                            </svg></a>
+                        </li>
+                        <li class="common-icon-item"><a class="common-icon-link" href="https://www.twitter.com">
+                            <svg class="common-icon" width="20px" height="20px">
+                                <use href="./images/icons/symbol-defs.svg#icon-s-twitter"></use>
+                            </svg></a>
+                        </li>
+                        <li class="common-icon-item"><a class="common-icon-link" href="https://www.facebook.com">
+                            <svg class="common-icon" width="20px" height="20px">
+                                <use href="./images/icons/symbol-defs.svg#icon-s-facebook"></use>
+                            </svg></a>
+                        </li>
+                        <li class="common-icon-item"><a class="common-icon-link" href="https://www.linkedin.com">
+                            <svg class="common-icon" width="20px" height="20px">
+                                <use href="./images/icons/symbol-defs.svg#icon-s-linkedin"></use>
+                            </svg></a>
+                        </li>
+                    </ul>            
+            </section>
+        </div>
 
     </footer>
 
